syntax = "proto3";
package vividbridge.vividbridge;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "vividbridge/vividbridge/params.proto";
import "vividbridge/vividbridge/vivid_guardians.proto";
// this line is used by starport scaffolding # 1

option go_package = "vivid-bridge/x/vividbridge/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/vivid-bridge/vividbridge/params";
  }
  // Queries a VividGuardians by id.
	rpc VividGuardians(QueryGetVividGuardiansRequest) returns (QueryGetVividGuardiansResponse) {
		option (google.api.http).get = "/vivid-bridge/vividbridge/vivid_guardians/{id}";
	}

	// Queries a list of VividGuardians items.
	rpc VividGuardiansAll(QueryAllVividGuardiansRequest) returns (QueryAllVividGuardiansResponse) {
		option (google.api.http).get = "/vivid-bridge/vividbridge/vivid_guardians";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetVividGuardiansRequest {
	uint64 id = 1;
}

message QueryGetVividGuardiansResponse {
	VividGuardians VividGuardians = 1 [(gogoproto.nullable) = false];
}

message QueryAllVividGuardiansRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllVividGuardiansResponse {
	repeated VividGuardians VividGuardians = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
